# Stux

./: CMakeLists.txt  CODE_REVIEW.md  README.md  sdkconfig.defaults
.github/workflows/: release.yml
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/hooks/: use-latest-release.ts
frontend/src/lib/: backend.ts
frontend/src/pages/: FirmwarePage.tsx  SettingsPage.tsx
ideas/: settings-refactor.md
main/: CMakeLists.txt  idf_component.yml
main/Application/CommandManager/: CommandManager.cpp  CommandManager.h
main/Application/MqttManager/: MqttManager.cpp
main/Application/NetworkManager/: NetworkManager.cpp  NetworkManager.h
main/Application/SettingsManager/: SettingsDefs.h  SettingsManager.cpp  SettingsManager.h
main/Application/TimeManager/: TimeManager.cpp
main/Application/WebServerManager/: WebServerManager.cpp  WebServerManager.h
main/hardware/: StatusLed.h
